# Neutrino

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
docs/architecture/: NEUTRINO_N8N_PAPERCLIP_TARGET_ARCHITECTURE.md
docs/governance/: SAFETY_DECISION_MANIFEST.md
docs/roadmap/: NEUTRINO_GOVERNANCE_POLISH_REPORT.md  NEUTRINO_ISSUE_ALIGNMENT_REPORT.md  NEUTRINO_OWNER_DECISIONS_REPORT.md  NEUTRINO_PHASE_0_1_SYNC_REPORT.md  NEUTRINO_PHASE_1_ISSUE_10_REPORT.md  NEUTRINO_PHASE_1_ISSUE_11_REPORT.md  NEUTRINO_PHASE_1_ISSUE_12_REPORT.md  NEUTRINO_PHASE_1_ISSUE_15_REPORT.md  NEUTRINO_PHASE_1_ISSUE_2_REPORT.md  NEUTRINO_PHASE_1_ISSUE_3_REPORT.md  NEUTRINO_PHASE_1_ISSUE_46_REPORT.md  NEUTRINO_PHASE_1_ISSUE_5_REPORT.md  NEUTRINO_PHASE_1_ISSUE_6_REPORT.md  NEUTRINO_PHASE_1_ISSUE_7_REPORT.md  NEUTRINO_PHASE_2_ISSUE_13_REPORT.md  NEUTRINO_PHASE_2_ISSUE_14_REPORT.md  NEUTRINO_PHASE_2_ISSUE_18_REPORT.md  NEUTRINO_PHASE_2_ISSUE_19_REPORT.md  NEUTRINO_PHASE_2_ISSUE_20_REPORT.md  NEUTRINO_PHASE_2_ISSUE_21_REPORT.md  NEUTRINO_PHASE_2_ISSUE_4_REPORT.md
docs/schemas/: validation_recipe.schema.json
docs/specs/: policy-parser.md
docs/standards/: CODE_CONVENTIONS.md
src/neutrino/: __init__.py
src/neutrino/active_validation/: __init__.py  gate.py  models.py
src/neutrino/approval/: __init__.py  models.py  workflow.py
src/neutrino/audit/: __init__.py  models.py  writer.py
src/neutrino/budget/: __init__.py  models.py  policy.py  status.py
src/neutrino/evidence_diff/: __init__.py  differ.py  models.py
src/neutrino/evidence_oracle/: __init__.py  models.py  oracle.py
src/neutrino/models/: __init__.py  entities.py  policy.py
src/neutrino/policy/: __init__.py  parser.py
src/neutrino/policy_enforcement/: __init__.py  enforcer.py  models.py
src/neutrino/ratelimit/: __init__.py  enforcer.py  models.py
src/neutrino/scopeguard/: __init__.py  dns.py  evasion.py  guard.py  models.py  redirects.py
src/neutrino/storage/: __init__.py  exceptions.py  migrations.py  paths.py  schema.py  sqlite.py
src/neutrino/validation_executor/: __init__.py  executor.py  handlers.py  models.py
src/neutrino/validation_recipe/: __init__.py  models.py  schema.py  validators.py
tests/: __init__.py
tests/active_validation/: test_gate.py
tests/approval/: __init__.py  test_human_authorization.py
tests/audit/: test_integrity.py  test_writer.py
tests/budget/: test_budget_policy.py
tests/evidence_diff/: __init__.py  test_differ.py
tests/evidence_oracle/: __init__.py  test_oracle.py
tests/policy/: __init__.py  test_parser.py
tests/policy_enforcement/: test_enforcer.py
tests/ratelimit/: test_enforcer.py
tests/scopeguard/: test_guard.py  test_redirect_cname.py
tests/storage/: test_migrations.py  test_repositories.py  test_schema.py
tests/validation_executor/: __init__.py  test_executor.py
tests/validation_recipe/: test_schema.py
(+10 files in other folders)
