[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neutrino"
version = "0.1.0"
description = "Neutrino Safety Core — deterministic bug bounty scope validation and safety enforcement"
readme = "README.md"
license = { text = "TBD" }
requires-python = ">=3.11"
authors = [
    { name = "Neutrino Contributors" }
]
keywords = ["bug-bounty", "scope-validation", "safety", "security"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "nox>=2024.4",
]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://github.com/xxammaxx/Neutrino"
Repository = "https://github.com/xxammaxx/Neutrino.git"
Issues = "https://github.com/xxammaxx/Neutrino/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neutrino"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    # Allow longer docstrings and comments
    "E501",  # line-too-long (handled by formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert (allowed in tests)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
strict = true
python_version = "3.11"
packages = ["src/neutrino"]
warn_unreachable = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/neutrino",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]
